frontend/test/should_pass/basic_026.grg
rule r {
	x:Node -e:Edge-> y:Node;

	modify {
		x -e-> y;
	}
}
