frontend/test/should_fail/edge_003.grg
rule r {
	x:Node <-e:AEdge-> y:Node;

	modify {
	}
}
